--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="conteiner text-center">
-<img class="rounder-circle imagem" src="/img/istockphoto-1457206081-612x612.jpg">
+
+<img class="rounded-circle imagem"   src="./img/istockphoto-1457206081-612x612.jpg">
+
 
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
