--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <header class="conteiner text-center">
 
 <img class="rounded-circle imagem"   src="./img/istockphoto-1457206081-612x612.jpg">
-
+<p class="lead"> Eu sou Eduardo</p>
+<h1>Eu sou estudante</h1>
+<p>minhas habilidades</p>
+<div>
+p <class="badge bg-secondary"> jogos online</p>
+p <class="badge bg-secondary"> futebol</p>
+p <class="badge bg-secondary"> jogos com airsoft</p>
+</div>
 
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
