--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h1>Eu sou estudante</h1>
 <p>minhas habilidades</p>
 <div>
-p <class="badge bg-secondary"> jogos online</p>
-p <class="badge bg-secondary"> futebol</p>
-p <class="badge bg-secondary"> jogos com airsoft</p>
+<p <class="badge bg-secondary"> jogos online</p>
+<p <class="badge bg-secondary"> futebol</p>
+<p <class="badge bg-secondary"> jogos com airsoft</p>
 </div>
 
     </header>
