--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 </div>
 
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <main class="conteiner mt-5"> 
+        <h2>Meus Projetos</h2>
+        <div class="row">
+        <div class="col-md-4"
+        <div class="card">
+        <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+
+        </div>
+        </div>
+        </div>
+        </div>
+    </main>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
