--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h1>Eu sou estudante</h1>
 <p>minhas habilidades</p>
 <div>
-<p <class="badge bg-secondary"> jogos online</p>
-<p <class="badge bg-secondary"> futebol</p>
-<p <class="badge bg-secondary"> jogos com airsoft</p>
+<p <class="badge bg-secondary"> curiosidades sobre planetas</p>
+<p <class="badge bg-secondary"> planetas</p>
+<p <class="badge bg-secondary"> universo</p>
 </div>
 
     </header>
@@ -29,11 +29,36 @@
         <div class="card">
         <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
         <div class="card-body">
+        <h5 class="card title">curiosidades sobre o mundo</h5>
+        <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+
+    
+    </div>
+        </div>
+        </div>
+        <div class="col-md-4"
+        <div class="card">
+        <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+        <h5 class="card title">curiosidades sobre o mundo</h5>
+        <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+
+    
+    </div>
+        </div>
+        </div><div class="col-md-4"
+        <div class="card">
+        <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+        <h5 class="card title">curiosidades sobre o mundo</h5>
+        <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+
 
         </div>
-        </div>
-        </div>
-        </div>
+
     </main>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
