--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="conteiner mt-5"> 
         <h2>Meus Projetos</h2>
         <div class="row">
-        <div class="col-md-4"
+        <div class="col-md-4">
         <div class="card">
         <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
         <div class="card-body">
@@ -37,7 +37,7 @@
     </div>
         </div>
         </div>
-        <div class="col-md-4"
+        <div class="col-md-4">
         <div class="card">
         <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
         <div class="card-body">
@@ -48,7 +48,7 @@
     
     </div>
         </div>
-        </div><div class="col-md-4"
+        </div><div class="col-md-4">g
         <div class="card">
         <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
         <div class="card-body">
