--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     </div>
         </div>
-        </div><div class="col-md-4">g
+        </div><div class="col-md-4">
         <div class="card">
         <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
         <div class="card-body">
