--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         </div><div class="col-md-4">
         <div class="card">
-        <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
+        <img src="img/images.jpeg" alt="" class="card-img-top">
         <div class="card-body">
         <h5 class="card title">curiosidades sobre o mundo</h5>
         <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
