--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="card">
         <img src="img/images.jpeg" alt="" class="card-img-top">
         <div class="card-body">
-        <h5 class="card title">curiosidades sobre o mundo</h5>
+        <h5 class="card title">os planetasc</h5>
         <p class="card-text">Os planetas do Sistema Solar formam um agrupamento de oito corpos celestes que orbitam o Sol: Mercúrio, Vênus Terra, Marte, Júpiter, Saturno, Urano e Netuno. São classificados em planetas rochosos (formados predominantemente por rochas e minerais) e em planetas gasosos (constituídos por gases diversos)</p>
         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
 
