--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>minhas habilidades</p>
 <div>
 <p <class="badge bg-secondary"> curiosidades sobre planetas</p>
-<p <class="badge bg-secondary"> planetas</p>
+<p <class="badge bg-secondary"> sistema solar</p>
 <p <class="badge bg-secondary"> universo</p>
 </div>
 
