--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </div>
         <div class="col-md-4">
         <div class="card">
-        <img src="img/istockphoto-1457206081-612x612.jpg" alt="" class="card-img-top">
+        <img src="img/planetas-do-sistema-solar-og.webp" alt="" class="card-img-top">
         <div class="card-body">
-        <h5 class="card title">curiosidades sobre o mundo</h5>
-        <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
+        <h5 class="card title">sistema solar</h5>
+        <p class="card-text">O Sistema Solar é um conjunto formado por oito planetas e outros corpos celestes, que orbitam o Sol, a sua principal estrela. Está localizado na Via Láctea, uma das galáxias que formam o Universo. São planetas do Sistema Solar: Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno..</p>
         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
 
     
