--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
         </div>
 
     </main>
+    <div class="modal" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+<div class="modal-header">
+    <h5 class="molda-title">minha biblioteca</h5>
+    <button class="btn-close" type="button"data-bs-dismiss="modal"arial-label="close"></button>
+</div>
+<div class="modal-body">
+   <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto sequi labore? Voluptate eligendi sed nulla odio maiores dolorum commodi blanditiis placeat dolores iusto quia quos est quibusdam illum dolorem ipsam voluptatem aut ex omnis asperiores, consequuntur eum consequatur nobis? Asperiores, quasi possimus maxime repudiandae dicta ratione? Numquam, adipisci animi.</p>
+    <p>lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto sequi labore? Voluptate eligendi sed nulla odio maiores dolorum commodi blanditiis placeat dolores iusto quia quos est quibusdam illum dolorem ipsam voluptatem aut ex omnis asperiores, consequuntur eum consequatur nobis? Asperiores, quasi possimus maxime repudiandae dicta ratione? Numquam, adipisci animi.</p>
+   <p> lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto sequi labore? Voluptate eligendi sed nulla odio maiores dolorum commodi blanditiis placeat dolores iusto quia quos est quibusdam illum dolorem ipsam voluptatem aut ex omnis asperiores, consequuntur eum consequatur nobis? Asperiores, quasi possimus maxime repudiandae dicta ratione? Numquam, adipisci animi.</p>
+</div>
+</div>
+</div>
+</div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
