--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card-body">
         <h5 class="card title">curiosidades sobre o mundo</h5>
         <p class="card-text">A Terra é considerada um planeta telúrico e possui sua estrutura interna dividida em: crosta terrestre, manto e núcleo. Além da estrutura interna, há também a externa que corresponde à litosfera, hidrosfera, biosfera e atmosfera, que são o que oferece as condições favoráveis para a existência de vida aqui.</p>
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1"> veja o projeto</button>
 
     
     </div>
@@ -43,7 +43,7 @@
         <div class="card-body">
         <h5 class="card title">sistema solar</h5>
         <p class="card-text">O Sistema Solar é um conjunto formado por oito planetas e outros corpos celestes, que orbitam o Sol, a sua principal estrela. Está localizado na Via Láctea, uma das galáxias que formam o Universo. São planetas do Sistema Solar: Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno..</p>
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2"> veja o projeto</button>
 
     
     </div>
@@ -54,7 +54,7 @@
         <div class="card-body">
         <h5 class="card title">os planetas</h5>
         <p class="card-text">Os planetas do Sistema Solar formam um agrupamento de oito corpos celestes que orbitam o Sol: Mercúrio, Vênus Terra, Marte, Júpiter, Saturno, Urano e Netuno. São classificados em planetas rochosos (formados predominantemente por rochas e minerais) e em planetas gasosos (constituídos por gases diversos)</p>
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#model1"> veja o projeto</button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3"> veja o projeto</button>
 
 
         </div>
