--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
 <div class="modal-header">
-    <h5 class="molda-title">minha biblioteca</h5>
+    <h5 class="molda-title">planeta terra</h5>
     <button class="btn-close" type="button"data-bs-dismiss="modal"arial-label="close"></button>
 </div>
 <div class="modal-body">
